--- a/versions.gradle
+++ b/versions.gradle
@@ -25,6 +25,7 @@ def versions = [:]
     versions.coroutines = "1.3.0-M2"
     versions.coroutines_android = "1.3.0-M2"
     versions.event_bus = "3.1.1"
+    versions.paging = "beat-1.0.1"
     ext.versions = versions
 
 def deps = [:]
@@ -38,6 +39,7 @@ def deps = [:]
     deps.okhttp3 = "com.squareup.okhttp3:okhttp:$versions.okhttp3"
     deps.utils = "com.blankj:utilcode:$versions.utils"
     deps.event_bus = "org.greenrobot:eventbus:$versions.event_bus"
+    deps.paging = "com.igetcool.paging:auto-paging:$versions.paging"
 
 def support = [:]
     support.appcompat_v7 = "com.android.support:appcompat-v7:$versions.support"
@@ -90,5 +92,12 @@ static def addRepos(RepositoryHandler handler) {
     handler.google()
     handler.jcenter()
     handler.mavenCentral()
+    handler.maven {
+        url "http://app.mvn-int.igetcool.com/repository/igetcool/"
+        credentials {
+            username 'igetcool_pub'
+            password '123456'
+        }
+    }
 }
 ext.addRepos = this.&addRepos
