--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.igc.list">
     
     <application
-        android:name=".MyApplication"
+        android:name="com.igc.paging.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.igc.list.MainActivity">
+        <activity android:name="com.igc.paging.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 
