--- a/versions.gradle
+++ b/versions.gradle
@@ -6,13 +6,12 @@
 ext.deps = [:]
 
 def versions = [:]
-    versions.android_gradle_plugin = '3.4.1'
-    versions.kotlin = "1.3.31"
-    versions.support = "28.0.0"
+    versions.android_gradle_plugin = '4.0.1'
+    versions.kotlin = "1.3.72"
     versions.retrofit = "2.0.1"
     versions.rxjava2_adapter = "1.0.0"
     versions.constraint_layout = "1.1.3"
-    versions.rxjava2 = "2.1.3"
+    versions.rxjava2 = "2.2.0"
     versions.rxandroid = "2.0.1"
     versions.smartrefresh = "1.1.0-alpha-28"
     versions.lifecycle = "1.1.0"
@@ -30,7 +29,7 @@ def versions = [:]
 
 def deps = [:]
     deps.android_gradle_plugin = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
-    deps.constraint_layout = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
+    deps.constraint_layout = 'androidx.constraintlayout:constraintlayout:1.1.3'
     deps.smartrefresh = "com.scwang.smartrefresh:SmartRefreshLayout:$versions.smartrefresh"
     deps.multitype = "me.drakeet.multitype:multitype:$versions.multitype"
     deps.logger = "com.orhanobut:logger:$versions.logger"
@@ -42,11 +41,8 @@ def deps = [:]
     deps.paging = "com.igetcool.paging:auto-paging:$versions.paging"
 
 def support = [:]
-    support.appcompat_v7 = "com.android.support:appcompat-v7:$versions.support"
-    support.recyclerview = "com.android.support:recyclerview-v7:$versions.support"
-    support.multidex = "com.android.support:multidex:$versions.multidex"
-    support.animation = "com.android.support:support-dynamic-animation:$versions.support"
-    support.design = "com.android.support:design:$versions.support"
+    support.appcompat_v7 = 'androidx.appcompat:appcompat:1.1.0'
+    support.recyclerview = 'androidx.recyclerview:recyclerview:1.0.0'
     deps.support = support
 
 def retrofit = [:]
@@ -74,7 +70,7 @@ def rx = [:]
     deps.rx = rx
 
 def lifecycle = [:]
-    lifecycle.extensions = "android.arch.lifecycle:extensions:$versions.lifecycle"
+    lifecycle.extensions = 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     deps.lifecycle = lifecycle
 
 def build_versions = [:]
